[package]
name = "rki-plot"
version = "0.1.0"
authors = ["Sebastian Müller <gsenpo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.10", features= ["blocking"] }
rasciigraph = "0.1.1"
