[package]
name = "rki-plot"
version = "1.0.0"
authors = ["Sebastian Müller <gsenpo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.10", features= ["blocking"] }
rasciigraph = "0.1.1"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
prettytable-rs = "^0.6"
